--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+mocks
 
 # testing
 /coverage
@@ -72,3 +73,8 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Environments
+.env
+.env.production
+.env.staging
