--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,8 +19,7 @@ target 'viora' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    :app_path => "#{Pod::Config.instance.installation_root}/..",
-    :hermes_enabled => true
+    :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
   target 'vioraTests' do
