--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint .",
     "assets": "npx react-native-asset",
     "start": "react-native start",
+    "clean": "npx react-native clean",
     "test": "jest"
   },
   "dependencies": {
@@ -26,6 +27,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-image-picker": "^7.1.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.7",
