feat:add support for launch protocol

--- a/ios/viora/Info.plist
+++ b/ios/viora/Info.plist
@@ -62,5 +62,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>viora</string>
+	</array>
+	<key>CFBundleURLTypes</key>
+		<array>
+			<dict>
+				<key>CFBundleURLSchemes</key>
+				<array>
+					<string>viora</string>
+				</array>
+			</dict>
+		</array>
 </dict>
 </plist>
