--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^13.0.1",
     "react-native-quick-actions": "^0.3.13",
     "react-native-safe-area-context": "^4.10.7",
